Fixing bug when fell a column and remained some elements above

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Bejeweled</title>
-        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+        <script src="scripts/jquery.min.js"></script>
+        <script src="scripts/jquery-ui.js"></script>
         <script src="scripts/script.js"></script>
         <link rel="stylesheet" href="styles/style.css">
     </head>
