--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Bejeweled</title>
         <script src="scripts/jquery.min.js"></script>
-        <script src="scripts/jquery-ui.js"></script>
+        <script src="scripts/jquery-ui.custom.min.js"></script>
         <script src="scripts/script.js"></script>
         <link rel="stylesheet" href="styles/style.css">
     </head>
