--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
+        <div id="points"></div>
         <div id="grid"></div>
         <script>
         
